# projeto_compiladores

./: .gitignore  COMPLETE_GUIDE.md  DEPENDENCY_SETUP.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  TECHNICAL_ARCHITECTURE.md  VERIFICATION_REPORT.md  WEB_INTERFACE_README.md  compile.py  factorial.c  minipar.py  pyproject.toml  run_tests.py  verify_setup.py
docs/: INTEGRATION.md
docs/tutorials/: ARM_COMPILATION_GUIDE.md  CHANNEL_TUTORIAL.md  QUICK_START_CHANNELS.md  RUNNING_ASSEMBLY_GUIDE.md  TUTORIAL.md  (+1 more)
examples/: README.md  calc_client.minipar  calc_server.minipar  compiler.py  ex1.minipar  ex2.minipar  ex3.minipar  ex4.minipar  ex5.minipar  ex7.minipar  ex8.minipar  ex9.minipar  fatorial_rec.minipar  quicksort.minipar  test_break_continue.minipar  test_echo_client.minipar  test_echo_server.minipar  test_seq_par.minipar
interface/: IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  QUICKSTART.md  README.md  app.py  compiler_api.py  output  requirements.txt  start.bat  start.sh  test_api.py  test_setup.py
src/: __init__.py  arm_codegen.py  ast_nodes.py  backend.py  c_codegen.py  codegen.py  compiler.py  lexer.py  minipar_cli.py  parser.py  runner.py  semantic.py  symbol_table.py
tests/: oo_counter.minipar  program_test_1.minipar  program_test_1.txt  program_test_2.minipar  program_test_2.txt  program_test_3.minipar  program_test_4.minipar  program_test_5.minipar  program_test_6.minipar  program_test_7.minipar  program_test_7.txt  program_test_8.minipar  program_test_8.txt  program_test_9.minipar  run_program_tests.py  test_compilerok.py  test_integration_api.py
(+1 files in other folders)
