[project]
name = "minipar-compiler"
version = "1.0.0"
description = "Frontend completo de compilador para a linguagem Minipar"
authors = [
    {name = "Projeto Compiladores"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["compiler", "lexer", "parser", "code-generation", "minipar"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core compiler has no external dependencies - uses only Python standard library
# Web interface dependencies are optional
dependencies = []

[project.optional-dependencies]
# Development dependencies
dev = []

# Web interface dependencies
web = [
    "gradio>=4.0.0",
]

[project.scripts]
minipar = "minipar:main"
minipar-test = "tests.test_compilerok:main"
minipar-compile = "src.compiler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "examples", "tests"]

[tool.uv]
dev-dependencies = [
    "gradio>=4.0.0",
]
